2011-11-02  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c src/util.h src/set.c (set_encoding set_degreesign):
	Provide an internal char sequence degree_sign[] appropriate for the
	current encoding.  Use iconv(), if available, to translate it into the
	environment's locale after `set encoding locale`.

	* src/show.c (show_decimalsign):  Show the degree sign also, mostly
	so that people can report problems with the encoding code above.

2011-11-01  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wmenu.c src/win/wtext.c: Use proper dropdown menu for 
	Options toolbar item.

2011-10-30  Bastian Maerkisch  <bmaerkisch@web.de>

	* INSTALL: Update Windows section.

	* config/makefile.mgw: Superseded by config/mingw/Makefile. Removed.

2011-10-30  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* config/config.nt config/makefile.nt: Windows console apps support
	pipes.

2011-10-30  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.cyg config/config.mgw config/config.nt
	config/config.oww: Enable stats command.

2011-10-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (make_palette):  Fix segfault caused by initializing a 
	terminal with an "infinite" color palette (colors == 0) when previous 
	terminal had merely a large color palette (e.g. WIN_PAL_COLORS 4096).
	Bug #3429772

2011-10-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/datafile.c src/fit.c src/mouse.c
	src/plot2d.c src/plot3d.c src/save.c src/set.c src/setshow.h src/show.c
	src/stats.c src/tabulate.c src/unset.c term/canvas.trm term/svg.trm:

	Change the axis structure field from TBOOLEAN axis.is_timedata to an
	enum {DT_NORMAL, DT_TIMEDATE} field axis.datatype.  This is preparation
	for adding code to implement a new mode DT_DMS (degrees, minutes,
	seconds) that tracks x and/or y as geographic coordinates.
	There is no change to the behavior of the current code.

2011-10-22  Ethan A Merritt  <merritt@u.washington.edu>
